--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # APP_NAME=Laravel
 APP_NAME="Multi-vendor E-commerce Application"
 APP_ENV=local
-APP_KEY=base64:RBL3wCIHmFe8xwd7pHCWzX9KKi1uQpbMzYzbWl+p5Po=
+APP_KEY=base64:taLuG3ttDcEwhp2iqwD0LhIb4hbE8Kxd5kQf4d9b/GY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -14,7 +14,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=multivendor_ecommerce
 DB_USERNAME=root
-DB_PASSWORD=0000
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
