--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "league/omnipay": "^3.2",
         "maatwebsite/excel": "^3.1",
         "milon/barcode": "^10.0",
-        "omnipay/paypal": "^3.0"
+        "omnipay/paypal": "^3.0",
+        "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
